--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app='LunchCheck'>
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,23 +7,24 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
   </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
-
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
-         </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
-         </div>
-   </div>
-
-</body>
+  <body>
+     <div class="container" ng-controller="LunchCheckController">
+       <h1>Lunch Checker</h1>
+           <div class="form-group">
+               <input id="lunch-menu" ng-model="lunch_menu" type="text"
+               placeholder="list comma separated dishes you usually have for lunch"
+               class="form-control" ng-style="textboxStyle">
+               <!-- Not considering empty input -->
+           </div>
+           <div class="form-group">
+               <button class="btn btn-default" ng-click="checkNumberOfItems();">Check If Too Much</button>
+           </div>
+           <div class="form-group message" ng-style="messageStyle">
+             {{ message }}
+           </div>
+     </div>
+  </body>
 </html>
