--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -17,7 +17,7 @@
                <input id="lunch-menu" ng-model="lunch_menu" type="text"
                placeholder="list comma separated dishes you usually have for lunch"
                class="form-control" ng-style="textboxStyle">
-               <!-- Not considering empty input -->
+               <!-- Not considering empty input , , i.e. item 1, item2, ,item3 -->
            </div>
            <div class="form-group">
                <button class="btn btn-default" ng-click="checkNumberOfItems();">Check If Too Much</button>
