--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       .categories:hover {
+        border: 2px solid black;
         cursor: pointer;
+        font-size: 1.2em;
+        padding: 2px;
       }
     </style>
   </head>
