--- a/module5-solution/src/public/signup/signup.html
+++ b/module5-solution/src/public/signup/signup.html
@@ -57,7 +57,7 @@
             Favourite Menu Item is required
           </span>
           <span
-            ng-if="!signUpForm.menuItem.$error.required && signUpCtrl.user.MenuItem.$error && signUpForm.menuItem.$touched"">
+            ng-if="!signUpForm.menuItem.$error.required && signUpCtrl.user.MenuItem.$error">
             No such menu number exists
           </span>
       </div>
